2008-08-26  Brian Merrell <bgmerrell@gmail.com>

	* src/AbstractTask.cs: add id property to abstract
	* src/Backends/Sqlite/SqliteTask.cs: add id property
	* src/Backends/Sqlite/SqliteBackend.cs: add id property
	* src/Backends/Rtm/RtmTask.cs: add id property
	* src/Backends/IceCore/IceTask.cs: add id property
	* src/Backends/EDS/EDSTask.cs: add id property
	* src/ITask.cs: add id property
	* src/RemoteControl.cs: add id property to dbus interface, this (and
	the above changes) fixes Bug 526492.  Thanks Thomas Van Machelen!
	* README: update with current info
	* MAINTAINERS: -boyd -calvin +sandy +brian

2008-08-18  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.ac: Bump version to 0.1.8.

2008-08-18  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* NEWS: Update for 0.1.7.

2008-08-06  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Application.cs: Make sure to run Catalog.Init first thing when
	  the app starts.

2008-07-28  Brian Merrell <bgmerrell@gmail.com>

	* src/NoteDialog.cs:  Scroll to bottom of window when a new note is
	created.  Cancel *new* note creation on Esc.  
	* src/NoteWidget.cs:  Disallow saving empty notes.  Expose public
	method to focus on TextView widget.

2008-07-17  Brian Merrell <bgmerrell@gmail.com>

	* configure.ac, src/PreferencesDialog.cs, src/Makefile.am: Added
	check for gtk-2.12+ with #if/#else to conditionally use the GtkTooltip
	class (which requires >=2.12) without having bump up our gtk version
	requirement just yet.  Fixes Bug #543245.

2008-07-06  Johnny Jacob  <jjohnny@novell.com>

	* src/PreferencesDialog.cs: Fixes a mnemonic conflict for completed
	tasks option. "_Completed" conflicts with "_Close". Changed to 
	"C_ompleted".

2008-07-04  Johnny Jacob  <jjohnny@novell.com>

	Fix for Bug #541190.
	
	* src/Application.cs: If tasque finds another instance running, 
	exit with 0 instead of -1.

2008-06-27  Brian Merrell <bgmerrell@gmail.com>
